--- a/bower.json
+++ b/bower.json
@@ -2,16 +2,21 @@
   "name": "portfolio",
   "version": "0.0.0",
   "dependencies": {
-    "angular": ">=1.2.*",
-    "json3": "~3.2.6",
-    "es5-shim": "~2.1.0",
-    "jquery": "~1.11.0",
+    "angular": "1.2.16",
+    "json3": "~3.3.1",
+    "es5-shim": "~3.1.0",
+    "jquery": "~1.11.1",
     "bootstrap-sass-official": "~3.1.1",
-    "angular-route": ">=1.2.*"
+    "angular-resource": "1.2.16",
+    "angular-cookies": "1.2.16",
+    "angular-sanitize": "1.2.16",
+    "angular-animate": "1.2.16",
+    "angular-touch": "1.2.16",
+    "angular-route": "1.2.16"
   },
   "devDependencies": {
-    "angular-mocks": ">=1.2.*",
-    "angular-scenario": ">=1.2.*"
+    "angular-mocks": "1.2.16",
+    "angular-scenario": "1.2.16"
   },
-  "testPath": "test/client/spec"  
+  "appPath": "app"
 }
