--- a/package.json
+++ b/package.json
@@ -1,38 +1,47 @@
 {
   "name": "portfolio",
   "version": "0.0.0",
-  "dependencies": {},
+  "scripts": {
+    "build": "rimraf dist && webpack --bail --progress --profile",
+    "server": "webpack-dev-server  -d  --history-api-fallback --inline --progress --port 9000",
+    "test": "karma start test/karma.conf.js",
+    "test-watch": "karma start test/karma.conf.js --auto-watch --no-single-run",
+    "start": "npm run server"
+  },
+  "dependencies": {
+    "angular": "^1.5.9",
+    "angular-animate": "^1.5.9",
+    "angular-cookies": "^1.5.9",
+    "angular-resource": "^1.5.9",
+    "angular-route": "^1.5.9",
+    "angular-sanitize": "^1.5.9",
+    "angular-touch": "^1.5.9",
+    "d3": "^4.4.0",
+    "es5-shim": "^4.5.9",
+    "jquery": "^3.1.1",
+    "json3": "^3.3.2",
+    "three.js": "^0.77.1"
+  },
   "devDependencies": {
-    "grunt": "^0.4.1",
-    "grunt-autoprefixer": "^0.7.3",
-    "grunt-concurrent": "^0.5.0",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-compass": "^0.7.2",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-imagemin": "^0.7.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-filerev": "^0.2.1",
-    "grunt-google-cdn": "^0.4.0",
-    "grunt-newer": "^0.7.0",
-    "grunt-ngmin": "^0.0.3",
-    "grunt-svgmin": "^0.4.0",
-    "grunt-usemin": "^2.1.1",
-    "grunt-wiredep": "^1.7.0",
+    "autoprefixer": "^6.5.3",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.24.1",
     "jshint-stylish": "^0.2.0",
-    "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1",
-    "grunt-karma": "^0.8.3"
+    "node-sass": "^4.5.0",
+    "postcss-loader": "^1.2.0",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^5.0.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   },
   "engines": {
     "node": ">=0.10.0"
-  },
-  "scripts": {
-    "test": "grunt test"
   }
 }
