--- a/package.json
+++ b/package.json
@@ -16,10 +16,16 @@
     "angular-route": "^1.5.9",
     "angular-sanitize": "^1.5.9",
     "angular-touch": "^1.5.9",
+    "classnames": "^2.2.5",
     "d3": "^4.4.0",
     "es5-shim": "^4.5.9",
     "jquery": "^3.1.1",
     "json3": "^3.3.2",
+    "lodash": "^4.17.4",
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react2angular": "^1.1.3",
     "three.js": "^0.77.1"
   },
   "devDependencies": {
@@ -27,6 +33,7 @@
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
